--- a/SAE 501 DREAM BOUND/Packages/manifest.json
+++ b/SAE 501 DREAM BOUND/Packages/manifest.json
@@ -1,6 +1,5 @@
 {
   "dependencies": {
-    "com.unity.cinemachine": "2.10.1",
     "com.unity.collab-proxy": "2.5.2",
     "com.unity.ide.rider": "3.0.31",
     "com.unity.ide.visualstudio": "2.0.22",
@@ -8,6 +7,7 @@
     "com.unity.inputsystem": "1.7.0",
     "com.unity.multiplayer.tools": "1.1.1",
     "com.unity.netcode.gameobjects": "1.10.0",
+    "com.unity.profiling.core": "1.0.2",
     "com.unity.render-pipelines.universal": "14.0.11",
     "com.unity.services.relay": "1.1.1",
     "com.unity.test-framework": "1.1.33",
@@ -47,5 +47,15 @@
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
     "com.unity.modules.xr": "1.0.0"
-  }
+  },
+  "scopedRegistries": [
+    {
+      "name": "Normal",
+      "url": "https://normcore-registry.normcore.io",
+      "scopes": [
+        "com.normalvr",
+        "io.normcore"
+      ]
+    }
+  ]
 }
