--- a/SAE 501 DREAM BOUND/Packages/manifest.json
+++ b/SAE 501 DREAM BOUND/Packages/manifest.json
@@ -48,14 +48,5 @@
     "com.unity.modules.wind": "1.0.0",
     "com.unity.modules.xr": "1.0.0"
   },
-  "scopedRegistries": [
-    {
-      "name": "Normal",
-      "url": "https://normcore-registry.normcore.io",
-      "scopes": [
-        "com.normalvr",
-        "io.normcore"
-      ]
-    }
-  ]
+  "scopedRegistries": []
 }
