--- a/SAE 501 DREAM BOUND/Packages/manifest.json
+++ b/SAE 501 DREAM BOUND/Packages/manifest.json
@@ -10,6 +10,7 @@
     "com.unity.profiling.core": "1.0.2",
     "com.unity.render-pipelines.universal": "14.0.11",
     "com.unity.services.relay": "1.1.1",
+    "com.unity.services.vivox": "16.5.3",
     "com.unity.test-framework": "1.1.33",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.7.6",
